added ros-specific openvdb

--- a/src/vdbfusion/vdbfusion/CMakeLists.txt
+++ b/src/vdbfusion/vdbfusion/CMakeLists.txt
@@ -33,7 +33,8 @@ if(NOT TARGET Eigen3::Eigen OR NOT TARGET OpenVDB::openvdb)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_INSTALL_FULL_LIBDIR}/cmake/OpenVDB")
   set(VDBFUSION_STANDALONE ON)
   find_package(Eigen3 REQUIRED)
-  find_package(OpenVDB REQUIRED)
+  find_package(TBB REQUIRED)
+  find_package(openvdb_vendor REQUIRED)
 endif()
 
 target_sources(vdbfusion PRIVATE MarchingCubes.cpp VDBVolume.cpp)
