--- a/src/vdbfusion/vdbfusion/CMakeLists.txt
+++ b/src/vdbfusion/vdbfusion/CMakeLists.txt
@@ -35,8 +35,8 @@ if(NOT TARGET Eigen3::Eigen OR NOT TARGET OpenVDB::openvdb)
   include(GNUInstallDirs)
   set(VDBFUSION_STANDALONE ON)
   find_package(Eigen3 REQUIRED)
-  list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/")
-  find_package(OpenVDB REQUIRED)
+  find_package(TBB REQUIRED)
+  find_package(openvdb_vendor REQUIRED)
 endif()
 
 target_sources(vdbfusion PRIVATE MarchingCubes.cpp VDBVolume.cpp)
@@ -46,7 +46,7 @@ set_target_properties(vdbfusion PROPERTIES PUBLIC_HEADER "VDBVolume.h")
 target_include_directories(
   vdbfusion PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
                                                        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-target_link_libraries(vdbfusion PUBLIC Eigen3::Eigen OpenVDB::openvdb)
+target_link_libraries(vdbfusion PRIVATE Eigen3::Eigen OpenVDB::openvdb)
 
 # NOTE: Installation is still work in progress, therefore we only support dev machines with all the 3rdparty
 # dependencies locally installed
